.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
22:38:27 **** Incremental Build of configuration Debug for project _Kamikaze_Phoenix ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -D__weak=__attribute__((weak)) -D__packed=__attribute__((__packed__)) -DUSE_HAL_DRIVER -DSTM32F303x8 -I../Inc -I../Drivers/STM32F3xx_HAL_Driver/Inc -I../Drivers/STM32F3xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F3xx/Include -I../Drivers/CMSIS/Include -Os -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Src\main.o ..\Src\main.c 
..\Src\main.c: In function 'main':
..\Src\main.c:272:6: warning: unused variable 'adc_compare' [-Wunused-variable]
  int adc_compare = 0;
      ^~~~~~~~~~~
..\Src\main.c:271:20: warning: unused variable 'angle' [-Wunused-variable]
  volatile uint16_t angle = 0;
                    ^~~~~
..\Src\main.c: In function 'MX_TIM3_Init':
..\Src\main.c:484:2: error: 'htim4' undeclared (first use in this function)
  htim4.Instance = TIM4;
  ^~~~~
..\Src\main.c:484:2: note: each undeclared identifier is reported only once for each function it appears in
..\Src\main.c:484:19: error: 'TIM4' undeclared (first use in this function)
  htim4.Instance = TIM4;
                   ^~~~
..\Src\main.c:487:22: error: 'PERIOD_VALUE' undeclared (first use in this function)
  htim4.Init.Period = PERIOD_VALUE;
                      ^~~~~~~~~~~~
..\Src\main.c:521:20: error: 'PULSE1_VALUE' undeclared (first use in this function)
  sConfigOC.Pulse = PULSE1_VALUE;
                    ^~~~~~~~~~~~
..\Src\main.c:529:20: error: 'PULSE2_VALUE' undeclared (first use in this function)
  sConfigOC.Pulse = PULSE2_VALUE;
                    ^~~~~~~~~~~~
..\Src\main.c:537:20: error: 'PULSE3_VALUE' undeclared (first use in this function)
  sConfigOC.Pulse = PULSE3_VALUE;
                    ^~~~~~~~~~~~
..\Src\main.c:545:20: error: 'PULSE4_VALUE' undeclared (first use in this function)
  sConfigOC.Pulse = PULSE4_VALUE;
                    ^~~~~~~~~~~~
Info: Parallel threads used: 1
22:39:33 **** Incremental Build of configuration Debug for project _Kamikaze_Phoenix ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -D__weak=__attribute__((weak)) -D__packed=__attribute__((__packed__)) -DUSE_HAL_DRIVER -DSTM32F303x8 -I../Inc -I../Drivers/STM32F3xx_HAL_Driver/Inc -I../Drivers/STM32F3xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F3xx/Include -I../Drivers/CMSIS/Include -Os -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Src\main.o ..\Src\main.c 
..\Src\main.c: In function 'main':
..\Src\main.c:279:6: warning: unused variable 'adc_compare' [-Wunused-variable]
  int adc_compare = 0;
      ^~~~~~~~~~~
..\Src\main.c:278:20: warning: unused variable 'angle' [-Wunused-variable]
  volatile uint16_t angle = 0;
                    ^~~~~
arm-atollic-eabi-gcc -o _Kamikaze_Phoenix.elf Drivers\STM32F3xx_HAL_Driver\Src\stm32f3xx_hal.o Drivers\STM32F3xx_HAL_Driver\Src\stm32f3xx_hal_adc.o Drivers\STM32F3xx_HAL_Driver\Src\stm32f3xx_hal_adc_ex.o Drivers\STM32F3xx_HAL_Driver\Src\stm32f3xx_hal_cortex.o Drivers\STM32F3xx_HAL_Driver\Src\stm32f3xx_hal_dma.o Drivers\STM32F3xx_HAL_Driver\Src\stm32f3xx_hal_flash.o Drivers\STM32F3xx_HAL_Driver\Src\stm32f3xx_hal_flash_ex.o Drivers\STM32F3xx_HAL_Driver\Src\stm32f3xx_hal_gpio.o Drivers\STM32F3xx_HAL_Driver\Src\stm32f3xx_hal_i2c.o Drivers\STM32F3xx_HAL_Driver\Src\stm32f3xx_hal_i2c_ex.o Drivers\STM32F3xx_HAL_Driver\Src\stm32f3xx_hal_pwr.o Drivers\STM32F3xx_HAL_Driver\Src\stm32f3xx_hal_pwr_ex.o Drivers\STM32F3xx_HAL_Driver\Src\stm32f3xx_hal_rcc.o Drivers\STM32F3xx_HAL_Driver\Src\stm32f3xx_hal_rcc_ex.o Drivers\STM32F3xx_HAL_Driver\Src\stm32f3xx_hal_tim.o Drivers\STM32F3xx_HAL_Driver\Src\stm32f3xx_hal_tim_ex.o Drivers\STM32F3xx_HAL_Driver\Src\stm32f3xx_hal_uart.o Drivers\STM32F3xx_HAL_Driver\Src\stm32f3xx_hal_uart_ex.o Src\circ_buff.o Src\control.o Src\deviceParameters.o Src\hx711.o Src\main.o Src\msg.o Src\realSpace.o Src\stm32f3xx_hal_msp.o Src\stm32f3xx_it.o Src\system_stm32f3xx.o startup\startup_stm32f303x8.o -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -T../STM32F303K8_FLASH.ld -specs=nosys.specs -static -Wl,-Map=_Kamikaze_Phoenix.map -Wl,--gc-sections -Wl,--defsym=malloc_getpagesize_P=0x80 -Wl,--start-group -lc -lm -Wl,--end-group -specs=nano.specs 
D:\Program Files (x86)\Atollic\TrueSTUDIO for STM32 9.0.0\ide\jre\bin\java -jar D:\Program Files (x86)\Atollic\TrueSTUDIO for STM32 9.0.0\Tools\arm-atollic-reports.jar sizeinfo list _Kamikaze_Phoenix.elf 
Generate build reports...
Print size information
   text	   data	    bss	    dec	    hex	filename
  21084	    124	   3828	  25036	   61cc	_Kamikaze_Phoenix.elf
Print size information done
Generate listing file
Output sent to: _Kamikaze_Phoenix.list
Generate listing file done
Generate build reports done
Info: Parallel threads used: 1
